policies/disallow-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-containers
  annotations:
    policies.kyverno.io/title: Disallow Privileged Containers
    policies.kyverno.io/severity: high
spec:
  validationFailureAction: Audit
  rules:
    - name: check-privileged
      match:
        any:
        - resources:
            kinds: ["Pod"]
      validate:
        message: "Les containers privileged sont interdits."
        pattern:
          spec:
            containers:
            - =(securityContext):
                =(privileged): false
