policies/require-resource-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resource-limits
  annotations:
    policies.kyverno.io/title: Require Resource Limits
    policies.kyverno.io/severity: medium
spec:
  validationFailureAction: Audit
  rules:
    - name: check-container-resources
      match:
        any:
        - resources:
            kinds: ["Pod"]
      exclude:
        any:
        - resources:
            namespaces:
              - kube-system
              - calico-system
              - argocd
              - cert-manager
              - kyverno
      validate:
        message: "Les resource limits CPU et memory sont requises."
        pattern:
          spec:
            containers:
            - resources:
                limits:
                  cpu: "?*"
                  memory: "?*"
